# KoGames

./: .gitignore  README.md  build.bat  dev.bat  index.html  package-lock.json  package.json  vite.config.ts
ai_conversations/: ai_conversation_20260330_201919.json
src/: App.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: games.rs  main.rs  paths.rs  power.rs  types.rs
src-tauri/src/game_library/: battlenet.rs  ea.rs  epic.rs  gog.rs  mod.rs  ubisoft.rs  xbox.rs
src/components/: BigScreen.svelte  DesktopMode.svelte
src/lib/: types.ts
src/lib/i18n/: en.ts  index.ts  zh.ts
